frontend/src/assets/scss/override.scss
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Lora:wght@600&display=swap');

.v-application {
  font-family: 'Lato', sans-serif !important;
}

.relative {
  position: relative !important;
}

a:-webkit-any-link {
  text-decoration: none !important;
}
.link {
  text-decoration: none !important;
}

.v-autocomplete__content.v-menu__content {
  border-radius: 30px !important;
}

.h1 {
  font-family: 'Lora', sans-serif !important;
  font-size: 40px !important;
  line-height: 42px !important;
}

.h2 {
  font-family: 'Lora', sans-serif !important;
  font-size: 36px !important;
  line-height: 38px !important;
}

.h3 {
  font-family: 'Lato', sans-serif !important;
  font-size: 36px !important;
  line-height: 38px !important;
}

.h4 {
  font-family: 'Lato', sans-serif !important;
  font-size: 24px !important;
  line-height: 26px !important;
}

.h5 {
  font-family: 'Lato', sans-serif !important;
  font-size: 18px !important;
  line-height: 20px !important;
}

.h6 {
  font-family: 'Lato', sans-serif !important;
  font-size: 16px !important;
  line-height: 18px !important;
}

p {
  font-family: 'Lato', sans-serif !important;
  font-weight: 400 !important;
  font-size: 16px !important;
  line-height: 18px !important;
  & .small-text {
    font-size: 14px !important;
  }
}

.text-14 {
  font-family: 'Lato', sans-serif !important;
  font-size: 14px;
  line-height: 14px;
}

.text-12 {
  font-family: 'Lato', sans-serif !important;
  font-size: 12px;
  line-height: 14px;
}

.w-100 {
  width: 100%;
}

.w-280 {
  width: 280px;
}

.counter-msg {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 18px;
  height: 18px;
  border-radius: 50%;
}

.theme--light.v-input input {
  background: transparent !important;
}
.theme--light.v-input input:-webkit-autofill {
  -webkit-background-clip: text !important;
}

.main-sub--text {
  font-family: 'Lato', sans-serif !important;
  font-size: 16px !important;
  line-height: 18px !important;
}

.button-main {
  font-family: 'Lato', sans-serif !important;
  font-size: 16px !important;
  letter-spacing: 0 !important;
}

.v-toolbar__items {
  .menu-header--nav {
    background-color: transparent !important;
    font-family: 'Lato', sans-serif !important;
    font-size: 18px !important;
  }
}
.theme--light.v-app-bar.v-toolbar.v-sheet.menu-header {
  padding: 25px 0 !important;
}

.v-card__user {
  border-radius: 10px !important;
  border: 1px solid transparent;
}

::-webkit-scrollbar {
  width: 20px;
  border-radius: 100px;
}

::-webkit-scrollbar-track {
  background-color: #e4e4e4;
  border-radius: 100px;
}

::-webkit-scrollbar-thumb {
  border-radius: 100px;
  border-left: 0;
  border-right: 0;
  background-color: #fe5faa;
}

